test/sema/positive/movesema/owned_ptr_move.impala
fn foo() -> () {
    let a = ~4;
    let b = a;
    let c = *b;
    let d = b;
}
