test/sema/negative/movesema/owned_ptr_move.impala
fn f() -> () {
    let a = ~4;
    let b = a;
    let c = a;
}
